fixed about page spacing on mobile and navbar logo issue

--- a/public/css/about.less
+++ b/public/css/about.less
@@ -69,7 +69,7 @@
 
 // Responsive homepage
 @media screen and (max-width: 960px) {
-	.mainsection {
+	.mainsection, .greeting {
 		padding-inline: 6em;
 	}
 	#embroidery .instacontent {
@@ -77,7 +77,7 @@
 	}
 }
 @media screen and (max-width: 675px) {
-	.mainsection {
+	.mainsection, .greeting {
 		padding-inline: 2em;
 	}
 	#embroidery .instacontent {
