--- a/public/css/easyaccess.less
+++ b/public/css/easyaccess.less
@@ -41,6 +41,7 @@
 
 #bigquestion {
     background-color: @lightskyblue;
+    
 }
 
 .bgcolored {
@@ -125,7 +126,7 @@
     align-items:center; 
     
 }
-#logo {
+#easyaccesslogo {
     width: 40%;
 }
 #landingpages {
